You can send an email to make a blog post!

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,8 @@ name = "newsletters"
 main = "src/worker.js"
 workers_dev = true
 compatibility_date = "2000-01-01"
+
+[vars]
+DOMAIN = "catskull.net"
+GITHUB_OWNER = "catskull"
+GITHUB_REPO = "catskull.github.io"
