--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
 	},
 	"devDependencies": {
 		"wrangler": "^4.14.3"
+	},
+	"dependencies": {
+		"cheerio": "^1.0.0",
+		"octokit": "^4.1.3",
+		"postal-mime": "^2.4.3"
 	}
 }
