Github branch name is an env var

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,4 @@ compatibility_date = "2000-01-01"
 DOMAIN = "catskull.net"
 GITHUB_OWNER = "catskull"
 GITHUB_REPO = "catskull.github.io"
+GITHUB_BRANCH = "master"
