--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ workers_dev = true
 compatibility_date = "2000-01-01"
 
 [vars]
-DOMAIN = "catskull.net"
+EMAIL = "bro@catskull.net"
 GITHUB_OWNER = "catskull"
 GITHUB_REPO = "catskull.github.io"
 GITHUB_BRANCH = "master"
